# c-toolbelt

./: .pre-commit-config.yaml  CMakeLists.txt  README.md  c_toolbelt-config.cmake.in  ctb-config.cmake.in
.github/workflows/: deploy.yml  test.yml
include/c_toolbelt/: bzero.h  c_toolbelt.h  endian.h  private.h  realloc.h  size.h  strlcpy.h
include/ctb/: bits.h  byteswap.h  bzero.h  config.h.in  ctb.h  endian.h  realloc.h  strdup.h  strlcpy.h  strtok_s.h
src/: bzero.c  c_toolbelt.c  endian.c  realloc.c  strdup.c  strlcpy.c  strtok_s.c
test/: CMakeLists.txt  endian.c
